# DANS-File-Format-Service

./: Dockerfile  README.md  pyproject.toml
resources/: all-formats.txt  dans-file-formats-service.xslt
src/: commons.py  main.py  protected.py  public.py
